RESOLVED FIXED 27846
MessageEvent should not be cancelable by default
https://bugs.webkit.org/show_bug.cgi?id=27846
Summary MessageEvent should not be cancelable by default
Andrew Wilson
Reported 2009-07-30 11:58:10 PDT
Currently, all MessageEvents are cancelable by default, but all of the uses in the HTML5 spec specify that it should not be. For example (from the spec for window.postMessage): "Create an event that uses the MessageEvent interface, with the event name message, which does not bubble, is not cancelable, and has no default action."
Attachments
proposed patch (3.19 KB, patch)
2009-09-14 18:03 PDT, Andrew Wilson
darin: review+
commit-queue: commit-queue-
Andrew Wilson
Comment 1 2009-09-14 18:03:53 PDT
Created attachment 39583 [details] proposed patch
WebKit Commit Bot
Comment 2 2009-09-14 18:34:28 PDT
Comment on attachment 39583 [details] proposed patch Rejecting patch 39583 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Eric Seidel (no email)
Comment 3 2009-09-15 10:45:12 PDT
Comment on attachment 39583 [details] proposed patch media/video-source-error.html -> timed out You've been bit by flakey media tests. :( bug 28624. Hopefully I'll get a chance to look at fixing that after perf stuff today.
Andrew Wilson
Comment 4 2009-09-15 10:54:27 PDT
OK, I'm ready to manually commit it anyway - if the commit-queue fails again I'll just manually commit. When I get a commit-queue failure, is there any way for me to tell what the failure was?
WebKit Commit Bot
Comment 5 2009-09-15 10:57:57 PDT
Comment on attachment 39583 [details] proposed patch Rejecting patch 39583 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Andrew Wilson
Comment 6 2009-09-15 11:28:08 PDT
Landed manually as r48395.
Eric Seidel (no email)
Comment 7 2009-09-15 14:58:41 PDT
http/tests/xmlhttprequest/cross-origin-authorization.html -> failed Maybe that was flakey? I think it might be related...
Note You need to log in before you can comment on or make changes to this bug.