MessageEvent should not be cancelable by default https://bugs.webkit.org/show_bug.cgi?id=27846

Reviewed by Darin Adler.

WebCore:

* dom/MessageEvent.cpp:
(WebCore::MessageEvent::MessageEvent):
Changed constructor to set cancelable=false by default, per the HTML5 spec.

LayoutTests:

* fast/events/message-port-expected.txt:
* fast/events/message-port.html:
Added test case to check state of MessageEvent.cancelable attribute.

Canonical link: https://commits.webkit.org/39960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48395 268f45cc-cd09-0410-ab3c-d52691b4dbfc